Sat Mar 24 02:09:20 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* decode.c (decode): Avoid reporting unaligned instructions twice.
	* area.c (Area_AlignOffset): Tune unaligned warning.
	* error.c (Error_SuppressMsg): Add.  Implements option -NOWarn.
	(errorCore, errorCoreLine): Remove Info, Warning suppress tests.
	(error, errorLine): Add calls to Error_SuppressMsg.
	* main.c, main.h (option_nowarn): Add.
	(main): Add -NOWarn option support.

Wed Mar 21 01:13:14 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* m_cpuctrl.c (m_msr, m_mrs): Corrected minimal architecture version.
	* local.c (c_rout): Add Thumb mode support.

Mon Mar 19 23:24:24 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/operator_index.s: Add tests based on labels.
	* symbols.s (c_import): Implement a more liberal syntax for import
	attributes.
	* m_cpu.c (onlyregs): Add test on architecture.
	(l_onlyregs): Likewise.
	* eval.c (evalUnop): Add support for area symbols for :BASE: and
	:INDEX:.

Sat Mar 17 21:54:33 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/instr_pkhbt_pkhtb.s: Add.
	* regression/tests_pass/instr_sxt_uxt.s: Mark IT cases.
	* regression/tests_pass/instr_bfc_bfi_sbfx_ubfx.s: Likewise.
	* decode.c (oDecodeTable): Add PKH.
	* value.c (Value_ResolveSymbol): Fix comment.
	* m_cpu.c, m_cpu.h (m_pkh): Add.

Sat Mar 17 19:00:51 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/ldm_stm_pop_push.s: Renamed to...
	* regression/tests_pass/instr_ldm_stm_pop_push.s: ...this.
	* regression/tests_pass/operator_addition_logical.s: Removed ^
	extension.  We no longer want to support this.
	* regression/tests_pass/directive_rlist.s: Add.
	* directive_symbol.c, directive_symbol.h (c_rout): Add.
	* decode.c (oDecodeTable): Add RLIST.
	* m_cpumem.c (dstreglist): Factor out register list parser to...
	* get.c (Get_CPURList): ...here.
	* get.h (Get_CPURList): Add.
	* lex.c (lexGetBinop): Remove ^ support.